# actix-web-cra-ssr

./: .gitignore  Cargo.toml  README.md  babel.config.js  config-overrides.js  package.json
patches/: react-scripts+3.4.1.patch
public/: index.html
src/: index.node.tsx  index.tsx  index.web.tsx  lib.rs  main.rs
src/backend/: routes.rs
src/backend/handlers/: cra.rs  misc.rs  mod.rs
src/frontend/: App.css  App.ssr.tsx  App.tsx  Paths.js  Routes.tsx  serviceWorker.ts
src/frontend/components/: ErrorBoundary.tsx  Footer.tsx  Layout.tsx
src/frontend/components/Header/: Header.css  index.tsx
src/frontend/components/Loading/: index.tsx
src/frontend/components/Media/: Media.css  index.tsx
src/frontend/pages/: AboutPage.tsx  DashboardPage.tsx  HomePage.tsx
utils/: index.ssr.ejs  ssrToStaticHtml.js
