[package]
name = "actix-web-cra-ssr"
license = "MIT OR Apache-2.0"
version = "0.3.0"
readme = "README.md"
authors = ["bartekus <bartekus@gmail.com>"]
repository = "https://github.com/bartekus/actix-web-cra-ssr/"
edition = "2018"

[dependencies]
actix-files = "^0.2.1"
actix-rt = "^1.0.0"
actix-session = "0.3.0"
actix-web = { version = "^2.0.0" }
env_logger = "^0.7.1"
futures = "^0.3.4"
serde_json = "^1.0.40"
lazy_static = "^1.4.0"
